<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apphome"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_baseline_collections_24"
            android:title="@string/menu_collections" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_baseline_upcoming_24"
            android:title="@string/menu_latest" />

        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_baseline_auto_graph_24"
            android:title="@string/menu_trending" />

        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_baseline_tips_and_updates_24"
            android:title="@string/menu_tips" />
    </group>
</menu>