<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoreConstraints"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AskUserRecord">

        <TextView
            android:id="@+id/StatsGameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/GameName"
            android:textSize="@dimen/titleSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="0dp"
            android:layout_height="71dp"
            android:layout_marginTop="30dp"
            android:text="ToggleButton"
            android:textOff="@string/HighScoreGame"
            android:textOn="@string/ScoreBoardGames"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/StatsGameTitle" />

        <LinearLayout
            android:id="@+id/formView"
            android:layout_width="0dp"
            android:layout_height="550dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:background="#A64D4D"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton">


            <TextView
                android:id="@+id/highscoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HighScoreGame"
                android:textAlignment="center"
                android:textSize="@dimen/formText" />

            <EditText
                android:id="@+id/socreInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0E0909"
                android:ems="10"
                android:inputType="numberDecimal"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/killsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/killsTitle"
                android:textAlignment="center"
                android:textSize="@dimen/formText" />

            <EditText
                android:id="@+id/killsInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/deathsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deathTitle"
                android:textAlignment="center"
                android:textSize="@dimen/formText" />

            <EditText
                android:id="@+id/deathInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/assistsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assistsTitle"
                android:textAlignment="center"
                android:textSize="@dimen/formText" />

            <EditText
                android:id="@+id/assistsInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/winsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/winsTitle"
                android:textAlignment="center"
                android:textSize="@dimen/formText" />

            <EditText
                android:id="@+id/winInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/lostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lostTitle"
                android:textAlignment="center"
                android:textSize="@dimen/formText" />

            <EditText
                android:id="@+id/lostInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submitButton" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>