<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_grad"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background_grad">
            <!--            android:background="@color/Background2"-->


            <LinearLayout
                android:id="@+id/imagelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/gameLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/GameImages"
                    app:srcCompat="@mipmap/ic_app_launcher" />

            </LinearLayout>

            <TextView
                android:id="@+id/ratingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/ratingsBackground"
                android:padding="5dp"
                android:text="@string/RatingsTV"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imagelayout"
                app:layout_constraintEnd_toEndOf="@+id/imagelayout" />

            <TextView
                android:id="@+id/gameLabel"
                android:layout_width="400dp"
                android:layout_height="51dp"
                android:background="@color/NameBackground"
                android:padding="10dp"
                android:text="@string/GameName"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagelayout" />

            <Button
                android:id="@+id/infoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/moreButtonText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveButton"
                app:layout_constraintStart_toEndOf="@+id/dateLabel"
                app:layout_constraintTop_toBottomOf="@+id/gameLabel" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:text="@string/SaveButtonText"
                app:layout_constraintBottom_toBottomOf="@+id/infoButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/infoButton" />

            <!--   <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imageViewPager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="3sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />-->


            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="84dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/bangers"
                android:text="@string/ReleaseDateFormat"
                android:textAlignment="center"
                android:textColor="@color/TextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/infoButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/infoButton" />

            <Button
                android:id="@+id/mExpButton"
                android:layout_width="141dp"
                android:layout_height="48dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/yourExp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dateLabel"
                app:layout_constraintTop_toBottomOf="@+id/gameLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>