<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/playerId"
        android:layout_width="102dp"
        android:layout_height="41dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bangers"
        android:text="@string/PlayerIDTitle"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/playerInput"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue_500"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/playerId"
        app:layout_constraintStart_toStartOf="@+id/playerId"
        app:layout_constraintTop_toBottomOf="@+id/playerId" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="141dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bangers"
        android:text="@string/DOB"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/playerInput"
        app:layout_constraintStart_toStartOf="@+id/playerInput"
        app:layout_constraintTop_toBottomOf="@+id/playerInput" />

    <EditText
        android:id="@+id/DateOfBirthInput"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue_500"
        android:ems="10"
        android:inputType="date"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/PlayButtonText"
        app:layout_constraintEnd_toEndOf="@+id/DateOfBirthInput"
        app:layout_constraintStart_toStartOf="@+id/DateOfBirthInput"
        app:layout_constraintTop_toBottomOf="@+id/DateOfBirthInput"
        app:strokeColor="@color/ic_app_launcher_background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/AppIcon"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>